@@ -2,7 +2,8 @@ Revision history for Perl extension Module::Build.
 
 0.30_01
  New Docs
- - Added a recipe for writing a new action to Module::Build::Cookbook
+ - Added a recipe for writing a new action to the Cookbook
+ - Added a recipe for bundling Module::Build to the Cookbook.
 
  Bug Fixes
  - Workaround HARNESS_TIMER env issue in t/compat.t (RT#39635)
